--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!Doctype html>
 <html lang="en-us">
-<head meta charset="utf-8>
-<meta name="viewport" content="width=device-width"></meta>
-
-
-
+<head>
+  <link rel="stylesheet" href="styles.css"
+    <meta charset="utf-8>
+    <meta name="viewport" content="width=device-width"></meta>
 
 </head>
 
 <body>
-  <h1>form without semantic HTML</h1>
+  <header>
+  <h1>form with semantic HTML</h1>
 
-
-<form>
-  <label for="fullmame"> Full name:</label>
-  <input type="text" id="fullname" name="email" required>
-
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
-
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required>
-
-  <label for="gender">Gender:</label>
-  <select id="gender" name="gender">
-    <option value="">Select</option>
-    <option value="male">Male</option>
-    <option value="female">Female</option>
-    <option value="other">Other</option>
- </select>
-
- <label for="newsletter">Subscribe to Newsletter:</label>
- <input type="checkbox" id="newsletter" name="newsletter">
-
- <label for="comments">Comments:</label>
- <textarea id="comments" name="comments" rows="4"></textarea>
-
- <button type="submit">Submit</button>
-</form>
-</body>
+  </header>
+  <div class="container">
+    <main>
+      <form>
+        <fieldset>
+          <legend>Personal Details</legend>
+          <label for="fullmame"> Full name:</label>
+          <input type="text" id="fullname" name="fullname" required><br><br>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required><br><br>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required><br><br>
+          <label for="gender">Gender:</label>
+          <select id="gender" name="gender"
+          <option value="">Select</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+          </select><br><br>
+        </fieldset>
+        <fieldset>
+          <Legend>Other Details</Legend>
+          <label for="newsletter">Subscribe to Newsletter:</label>
+          <input type="checkbox" id="newsletter" name="newsletter"><br><br>
+          <label for="comments">Comments:</label>
+          <textarea id="comments" name="comments" rows="4"></textarea><br><br>
+        </fieldset>
+        <button type="submit">Submit</button><br><br>
+      </form>
+      <aside>
+        <h1>Kaiser and Drexillin</h1>
+        <h2>programming lesson 4</h2>
+        <p>its game day and the world is happy</p>
+        <footer>IYF season 5</footer>
+      </aside>
+    </main>
+  </div>
+ </body>
+ </html>
 
